💄 fix: gap size on current meal cards

--- a/app/(protected-segment)/home/(current)/current.module.css
+++ b/app/(protected-segment)/home/(current)/current.module.css
@@ -45,7 +45,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 24px;
 }
 
 .notFoundText {
